k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paycash
  labels:
    app.kubernetes.io/part-of: paycash-platform
    app.kubernetes.io/managed-by: kustomize
